--- a/cambodia.html
+++ b/cambodia.html
@@ -53,7 +53,7 @@ position:absolute;
 <body>
 <left>
 
-	<img style="border:2px solid black;"src="pic/Capture.jpg" width="250px" height=100px" align="left"><br>
+	<img style="border:2px solid black;"src="pic/Capture.JPG" width="250px" height=100px" align="left"><br>
 	&nbsp;  <br>
 
 
@@ -64,9 +64,9 @@ position:absolute;
 <div class ="nav">
 <ul>
 
-<li><a href="file:///C:/Users/alex/Desktop/AIR/mywebsite8.html">RETURN</a></li>
+<li><a href="https://graceairfare.github.io/mywebsite8.html">RETURN</a></li>
 
-<p style =" color: white"><marquee><h1> LOCAL RATE<h1></marquee></p>
+
 
 <p><h2><font style="border:2px double;">3D2N SIEM REAP PACKAGE(HOTEL + TRANSFERS)</font></p></h2>
 <p><font size="4">Travel Period: Until Sep 30, 2018 (except Christmas Season, Holyweek and Holidays) minimum of 2 persons.</p>
@@ -78,7 +78,7 @@ position:absolute;
 <p><font size="4">*3D2N Hotel Accommodation with daily breakfast.</p>
 <p><font size="4">*Round trip airport transfers (8:00am-10:00pm)</p>
 <p><h2>(ITINERARY)</font></p></h2>
-<p><font size="4">Day 1: Arrival, Meet & transfer to hotel , Siem Reap Halfday City tour (2:00-5:00pm) visit Artisan D’Angkor, Wat Thmei, War Memorial Monument & Preah Ang Check & Preah Ang Chorm.</p>
+<p><font size="4">Day 1: Arrival, Meet & transfer to hotel , Siem Reap Halfday City tour (2:00-5:00pm) visit Artisan Dâ€™Angkor, Wat Thmei, War Memorial Monument & Preah Ang Check & Preah Ang Chorm.</p>
 <p><font size="4">Day 2: Breakfast, Angkor Temples Tour: Ta Prohm temple, Angkor Thom ancient walled city and the mystical Bayon temple, Angkor Wat and Phnom Bakheng excluding Lunch and Angkor Pass around.</p>
 <p><font size="4">Day 3: Breakfast, Hotel check-out then transfer to airport for return flight.</p>
 <p><h2>(IMPORTANT NOTES)</font></p></h2>
