--- a/china.html
+++ b/china.html
@@ -53,7 +53,7 @@ position:absolute;
 <body>
 <left>
 
-	<img style="border:2px solid black;"src="pic/Capture.jpg" width="250px" height=100px" align="left"><br>
+	<img style="border:2px solid black;"src="pic/Capture.JPG" width="250px" height=100px" align="left"><br>
 	&nbsp;  <br>
 
 
@@ -64,9 +64,9 @@ position:absolute;
 <div class ="nav">
 <ul>
 
-<li><a href="file:///C:/Users/alex/Desktop/AIR/mywebsite8.html">RETURN</a></li>
+<li><a href="https://graceairfare.github.io/mywebsite8.html">RETURN</a></li>
 
-<p style =" color: white"><marquee><h1> LOCAL RATE<h1></marquee></p>
+
 
 <p><h2><font style="border:2px double;">4D3N BEIJING PACKAGE(HOTEL + TRANSFERS + TOURS)</font></p></h2>
 <p><font size="4">Travel Period: Until Sep 30, 2018 (except Christmas Season, Holyweek and Holidays)</p>
@@ -86,11 +86,11 @@ position:absolute;
 <p><font size="4">*Mandatory Tipping is P700/person.</p>
 <p><h2>(ITINERARY FREE and EASY)</font></p></h2>
 <p><font size="4">Day 1: Manila/ Beijing (L) - Arrive at Beijing Capital Airport, meet and have welcome lunch at local Chinese restaurant, later compulsory tour to Tiananmen Square, Forbidden City, later have a sip of tea at Tea House, check-in at hotel, overnight in Beijing.</p>
-<p><font size="4">Day 2: Beijing (B, L) - After hotel breakfast, compulsory tour to Juyongguan Great Wall, en route jade museum, lunch at a local Chinese restaurant, back to city outside picture taking of 2008 Beijing Olympic sites ìBirds Nest and Water Cubeî and make a visit to Chinese herbal medicine research facility, then later transfer back to hotel, overnight in Beijing.</p>
+<p><font size="4">Day 2: Beijing (B, L) - After hotel breakfast, compulsory tour to Juyongguan Great Wall, en route jade museum, lunch at a local Chinese restaurant, back to city outside picture taking of 2008 Beijing Olympic sites ‚ÄúBirds Nest and Water Cube‚Äù and make a visit to Chinese herbal medicine research facility, then later transfer back to hotel, overnight in Beijing.</p>
 <p><font size="4">DAY 3: Beijing (B) - Free time for leisure Day 4: Beijing (B) - After hotel breakfast, free time till transfer to airport for return flight.</p>
 <p><h2>(ITINERARY FULL BOARD)</font></p></h2>
 <p><font size="4">Day 1: Manila/ Beijing (L, D) - Arrive at Beijing Capital Airport, meet and have lunch at local Chinese restaurant after begin compulsory tour to the Tiananmen Square and Forbidden City later enjoy a sip of tea at the Tea House, watch Acrobatic Show or Kung Fu Show, welcome dinner at Quanjude Pecking Duck restaurant.</p>
-<p><font size="4">Day 2: Beijing (B, L, D) - After hotel breakfast, compulsory tour to Juyongguan Great Wall, en route jade museum, lunch at local Chinese restaurant, continue tour to Ming Tomb, outside picture taking of 2008 Beijing Olympic sites ìBirds Nest and Water Cubeî and make a visit to Chinese herbal medicine research facility, dinner before transfer back to hotel.</p>
+<p><font size="4">Day 2: Beijing (B, L, D) - After hotel breakfast, compulsory tour to Juyongguan Great Wall, en route jade museum, lunch at local Chinese restaurant, continue tour to Ming Tomb, outside picture taking of 2008 Beijing Olympic sites ‚ÄúBirds Nest and Water Cube‚Äù and make a visit to Chinese herbal medicine research facility, dinner before transfer back to hotel.</p>
 <p><font size="4">Day 3: Beijing (B, L, D) - After breakfast, compulsory tour to Temple of Heaven, Pearl Store, Summer Palace, Silk Mall, free time shopping at Wangfujing Street, before transfer back to hotel.</p>
 <p><font size="4">Day 4: Beijing (B) - After breakfast, free time till transfer to airport for return flight.</p>
 
