--- a/indonesia.html
+++ b/indonesia.html
@@ -53,7 +53,7 @@ position:absolute;
 <body>
 <left>
 
-	<img style="border:2px solid black;"src="pic/Capture.jpg" width="250px" height=100px" align="left"><br>
+	<img style="border:2px solid black;"src="pic/Capture.JPG" width="250px" height=100px" align="left"><br>
 	&nbsp;  <br>
 
 
@@ -64,14 +64,14 @@ position:absolute;
 <div class ="nav">
 <ul>
 
-<li><a href="file:///C:/Users/alex/Desktop/AIR/mywebsite8.html">RETURN</a></li>
+<li><a href="https://graceairfare.github.io/mywebsite8.html">RETURN</a></li>
 
 <p style =" color: white"><marquee><h1> LOCAL RATE<h1></marquee></p>
 
 <p><h2><font style="border:2px double;">3D2N Bali Indonesia PACKAGE(Hotel + Airport Transfers)</font></p></h2>
 <p><font size="4">Travel Period: Until Sep 30, 2018 (except Christmas Season, Holyweek and Holidays) minimum of 2 persons.</P>
 <p><font size="4">*Maxone Seminyak Hotel/Siesta Legian Hotel/Solaris Hotel 3 Star P6,699/per pax.</P>
-<p><font size="4">*Honeymoon Package (1 BR Pool Villa) – 1 candlelight dinner with wine, couples massage, free access to Canggu Club, Free Shuttle Service to beach 4 Star Hotel P15,200/per pax.</P>
+<p><font size="4">*Honeymoon Package (1 BR Pool Villa) â€“ 1 candlelight dinner with wine, couples massage, free access to Canggu Club, Free Shuttle Service to beach 4 Star Hotel P15,200/per pax.</P>
 <p><h2>(INCLUSIONS)</font></p></h2>
 <p><font size="4">*3D2N Hotel Accommodation with daily breakfast.</P>
 <p><font size="4">*R/T Airport transfers (8:00am-10:00pm)</P>
