--- a/japan.html
+++ b/japan.html
@@ -53,7 +53,7 @@ position:absolute;
 <body>
 <left>
 
-	<img style="border:2px solid black;"src="pic/Capture.jpg" width="250px" height=100px" align="left"><br>
+	<img style="border:2px solid black;"src="pic/Capture.JPG" width="250px" height=100px" align="left"><br>
 	&nbsp;  <br>
 
 
@@ -64,9 +64,9 @@ position:absolute;
 <div class ="nav">
 <ul>
 
-<li><a href="file:///C:/Users/alex/Desktop/AIR/mywebsite8.html">RETURN</a></li>
+<li><a href="https://graceairfare.github.io/mywebsite8.html">RETURN</a></li>
 
-<p style =" color: white"><marquee><h1> LOCAL RATE<h1></marquee></p>
+
 
 <p><h1><font style="border:2px double;">4D3N TOKYO PACKAGE (HOTEL + 1 way TRANSFER)</font></p></h1>
 <p><font size="4">Travel Period: Until Sep 30, 2018 (except Christmas Season, Mar 21-Apr 15, 2018 and Holidays).</p>
@@ -82,11 +82,11 @@ position:absolute;
 <p><font size="4">*One Way Transfer (Narita / Haneda Airport to Hotel only).</p>
 <p><h2>(ITINERARY)</font></p></h2>
 <p><font size="4">Day 1: Arrival at Narita Airport, meet by tour coordinator and transfer to hotel for check-in.</p>
-<p><font size="4">Breakfast, Mt Fuji + Hakone Tour by BUS (7:00am – 7:30pm) – Meeting Point is Keio Plaza Hotel. </p>
+<p><font size="4">Breakfast, Mt Fuji + Hakone Tour by BUS (7:00am â€“ 7:30pm) â€“ Meeting Point is Keio Plaza Hotel. </p>
 <P><font size="4">Inclusions: Mt Fuji 5th station, Lunch, Lake Ashi Cruise and Mt Komagatake Ropeway. Add P2,000 for Bullet Train return.</p>
-<p><font size="4">Day 2: Breakfast, Mt Fuji + Hakone Tour by BUS (7:00am – 7:30pm) – Meeting Point is Keio Plaza Hotel.</p>
+<p><font size="4">Day 2: Breakfast, Mt Fuji + Hakone Tour by BUS (7:00am â€“ 7:30pm) â€“ Meeting Point is Keio Plaza Hotel.</p>
 <p><font size="4">Inclusions: Mt Fuji 5th station, Lunch, Lake Ashi Cruise and Mt Komagatake Ropeway. Add P2,000 for Bullet Train return</p>
-<p><font size="4">Day 3: Breakfast, Dynamic Tokyo Tour with Tokyo Tower (8:30am-5:30pm) – Meeting Point is Hamamatsucho Bus Terminal.</p>
+<p><font size="4">Day 3: Breakfast, Dynamic Tokyo Tour with Tokyo Tower (8:30am-5:30pm) â€“ Meeting Point is Hamamatsucho Bus Terminal.</p>
 <p><font size="4">Inclusions: Tokyo Tower Viewing Deck, Tea Ceremony, Lunch, Imperial Palace Plaza, Nijubashi Bridge, Sumida River Cruise, Sensoji Temple and Nakamise Shopping street.</p>
 <p><font size="4">Day 4: Breakfast, hotel check-out, meet and transfer to airport for return flight.</p>
  <p><h2>(IMPORTANT NOTE)</font></p></h2>
@@ -99,15 +99,15 @@ position:absolute;
 <p><h1><font style="border:2px double;">4D3N OSAKA PACKAGE (HOTEL + 1 way TRANSFER)</font></p></h1>
 <p><font size="4">Travel Period: Until Sep 30, 2018 (except Christmas Season, Mar 21-Apr 16, 2018 and Holidays) </p>
 <p><font size="4">Note: Minimum of 4 persons per booking</p>
-<p><font size="4">*Hotel Ritz Koshien – love hotel – big rooms P9999/per pax.</p>
-<p><font size="4">*Rihga Nakanoshima Inn Umeda (no breakfast) – semidouble bed P10999/per pax.</p>
-<p><font size="4">*The United Hotel Osaka Umeda (no breakfast) – twin bed P11999 per pax.</p>
+<p><font size="4">*Hotel Ritz Koshien â€“ love hotel â€“ big rooms P9999/per pax.</p>
+<p><font size="4">*Rihga Nakanoshima Inn Umeda (no breakfast) â€“ semidouble bed P10999/per pax.</p>
+<p><font size="4">*The United Hotel Osaka Umeda (no breakfast) â€“ twin bed P11999 per pax.</p>
 <p><font size="4">* New Osaka Hotel Shin Osaka P11999/per pax R Hotels Inn Osaka Kita Umeda 3-star P12599/per pax.</p>
-<p><font size="4">*Hotel La Raison Osaka Bay Area – far from station but good for family 4-star P15599/per pax .</p>
+<p><font size="4">*Hotel La Raison Osaka Bay Area â€“ far from station but good for family 4-star P15599/per pax .</p>
 <p><font size="4">*Hotel Elsereine Osaka Umeda 4-star P15599/per pax.</p>
 <p><font size="4">*Daiwa Roynet Hotel Osaka-Kitahama Umeda 3-star P16599/per pax .</p>
 <p><h2>(INCLUSIONS)</font></p></h2>
-<p><font size="4">*4D3N Hotel Accommodation without breakfast except selected hotels • One way transfer (Kansai Airport to hotel only).</p>
+<p><font size="4">*4D3N Hotel Accommodation without breakfast except selected hotels â€¢ One way transfer (Kansai Airport to hotel only).</p>
 <p><h2>(ITINERARY)</font></p></h2>
 <p><font size="4">Day 1: Arrival at Kansai Airport, meet by tour coordinator and transfer to hotel for check-in.</p>
 <p><font size="4">Day 2: Breakfast, free time or join optional tours.</p>
@@ -122,20 +122,20 @@ position:absolute;
  <p><h2>(OPTIONAL TOUR)</font></p></h2>
 <p><font size="4">(rate per person)- no hotel pick-up and drop-off.</p>
 <p><font size="4">*One Way Transfer (Osaka Hotel to Kansai Airport) - min of 4 pax, Add P750 if 3 pax and Add P1,500 if 2 pax P2,700/ per pax.</p>
-<p><font size="4">*Kyoto + Nara Tour by Train and BUS (8:00am – 8:00pm) – Meeting Point is Hotel Granvia Osaka. .</p>
+<p><font size="4">*Kyoto + Nara Tour by Train and BUS (8:00am â€“ 8:00pm) â€“ Meeting Point is Hotel Granvia Osaka. .</p>
 <p><font size="4">Inclusions: Nijo Castle, Kinkaku-ji Temple, Kyoto Imperial Palace, Kitano Tenmangu Shrine, Lunch, Nara Park, Todai-Ji Temple, Kasuga Taisha Shrine and Nara Nagomikan P8900/per pax.</p>
-<p><font size="4">*Whole Day Kyoto Tour (7:00am – 7:00pm) – Meeting Point is Hotel Granvia Osaka.</p>
+<p><font size="4">*Whole Day Kyoto Tour (7:00am â€“ 7:00pm) â€“ Meeting Point is Hotel Granvia Osaka.</p>
 <p><font size="4"> Inclusions: Nijo Castle, Kinkaku-ji Temple, Kyoto Imperial Palace, Kitano Tenmangu Shrine, Lunch, Heian Jingu Shrine, Sanjusangen-do Temple and Kiyomizu-dera Temple P7900/per pax P7900/per pax.</p>
-<p><font size="4">*Kyoto Morning Tour (7:00am – 2:40pm) – Meeting Point is Hotel Granvia Osaka.</p>
+<p><font size="4">*Kyoto Morning Tour (7:00am â€“ 2:40pm) â€“ Meeting Point is Hotel Granvia Osaka.</p>
 <p><font size="4">Inclusions: Nijo Castle, Kinkaku-ji Temple, Kyoto Imperial Palace, Kitano Tenmangu Shrine P4900/per pax.</p>
-<p><font size="4">*Kyoto Afternoon Tour (12:00pm – 7:00pm) – Meeting Point is Hotel Granvia Osaka. .</p>
+<p><font size="4">*Kyoto Afternoon Tour (12:00pm â€“ 7:00pm) â€“ Meeting Point is Hotel Granvia Osaka. .</p>
 <p><font size="4">Inclusions: Heian Jingu Shrine, Sanjusangen-do Temple and Kiyomizu-dera Temple P4900/per pax.</p>
-<p><font size="4">*Nara Afternoon Tour (12:00pm – 7:00pm) – Meeting Point is Hotel Granvia Osaka.</p>
+<p><font size="4">*Nara Afternoon Tour (12:00pm â€“ 7:00pm) â€“ Meeting Point is Hotel Granvia Osaka.</p>
 <p><font size="4">Inclusions: Nara Park, Todai-Ji Temple, Kasuga Taisha Shrine and Nara Nagomikan P5600/per pax.</p>
 <p><font size="4">*Universal Studios 1-day Pass (E-ticket) P4500/per pax.</p>
-<p><font size="4">*Osaka Whole Day Tour (10:00am – 4:40pm) – Meeting Point is Hotel Granvia Osaka.</p>
+<p><font size="4">*Osaka Whole Day Tour (10:00am â€“ 4:40pm) â€“ Meeting Point is Hotel Granvia Osaka.</p>
 <p><font size="4">Inclusions: Floating Garden Observatory, Lunch, Osaka Castle and Osaka Cruise P6900/per pax.</p>
-<p><font size="4">*Osaka Afternoon Tour (12:30pm – 4:40pm) – Meeting Point is Hotel Granvia Osaka.</p>
+<p><font size="4">*Osaka Afternoon Tour (12:30pm â€“ 4:40pm) â€“ Meeting Point is Hotel Granvia Osaka.</p>
 <p><font size="4">Inclusions: Osaka Castle and Osaka Cruise P5700/per pax.</p>
 <p><font size="4">Note: Optional tours must be booked at least 2 weeks prior to travel date.</p>
 
