--- a/mywebsite10.html
+++ b/mywebsite10.html
@@ -59,14 +59,14 @@ position:absolute;
 <body>
 	
 
-	<img style="border:2px solid black;"src="pic/Capture.jpg" width="250px" height=100px" align="left"><br>
+	<img style="border:2px solid black;"src="pic/Capture.JPG" width="250px" height=100px" align="left"><br>
 	&nbsp;  <br>
 
 
 <div class ="nav">
 <ul>
 
-<li><a href="file:///C:/Users/alex/Desktop/AIR/mywebsite8.html">RETURN</a></li>
+<li><a href="https://graceairfare.github.io/">RETURN</a></li>
 
 <p style =" color: white"><marquee><h1> THANK YOU for VISITING OUR WEBSITE<h1></marquee></p>
 
