--- a/mywebsite11.html
+++ b/mywebsite11.html
@@ -59,16 +59,16 @@ position:absolute;
 <body>
 	
 
-	<img style="border:2px solid black;"src="pic/Capture.jpg" width="250px" height=100px" align="left"><br>
+	<img style="border:2px solid black;"src="pic/Capture.JPG" width="250px" height=100px" align="left"><br>
 	&nbsp;  <br>
 
 
 <div class ="nav">
 <ul>
 
-<li><a href="file:///C:/Users/alex/Desktop/AIR/mywebsite8.html">RETURN</a></li>
+<li><a href="https://graceairfare.github.io/mywebsite8.html">RETURN</a></li>
 
-<p style =" color: white"><marquee><h1> TOURIST SPOTS<h1></marquee></p>
+
 
 	<img style="border:5px double black;"src="pic/nid.jpg" width=" 1000px"height="600px">
 	<br>
