--- a/mywebsite15.html
+++ b/mywebsite15.html
@@ -59,16 +59,16 @@ position:absolute;
 <body>
 	
 
-	<img style="border:2px solid black;"src="pic/Capture.jpg" width="250px" height=100px" align="left"><br>
+	<img style="border:2px solid black;"src="pic/Capture.JPG" width="250px" height=100px" align="left"><br>
 	&nbsp;  <br>
 
 
 <div class ="nav">
 <ul>
 
-<li><a href="file:///C:/Users/alex/Desktop/AIR/mywebsite8.html">RETURN</a></li>
+<li><a href="https://graceairfare.github.io/mywebsite8.html">RETURN</a></li>
 
-<p style =" color: white"><marquee><h1> PROMOS&PACKAGES<h1></marquee></p>
+
 
 
 	<img style="border:5px double black;"src="pic/pro.jpg" width=" 340px"height="300px">
