--- a/mywebsite9.html
+++ b/mywebsite9.html
@@ -55,14 +55,14 @@ position:absolute;
 <body>
 
 
-	<img style="border:2px; solid black;"src="pic/Capture.jpg" width="250px" height=100px" align="left"><br>
+	<img style="border:2px; solid black;"src="pic/Capture.JPG" width="250px" height=100px" align="left"><br>
 	&nbsp;  <br>
 	
 
 <div class ="nav">
 <ul>
 
-<li><a href="file:///C:/Users/alex/Desktop/AIR/mywebsite8.html">RETURN</a></li>
+<li><a href="https://graceairfare.github.io/mywebsite8.html">RETURN</a></li>
 
 <p style =" color: white"><marquee><h1> ABOUT our WEBSITE<h1></marquee></p>
 
