--- a/singapore.html
+++ b/singapore.html
@@ -53,7 +53,7 @@ position:absolute;
 <body>
 <left>
 
-	<img style="border:2px solid black;"src="pic/Capture.jpg" width="250px" height=100px" align="left"><br>
+	<img style="border:2px solid black;"src="pic/Capture.JPG" width="250px" height=100px" align="left"><br>
 	&nbsp;  <br>
 
 
@@ -64,9 +64,9 @@ position:absolute;
 <div class ="nav">
 <ul>
 
-<li><a href="file:///C:/Users/alex/Desktop/AIR/mywebsite8.html">RETURN</a></li>
+<li><a href="https://graceairfare.github.io/mywebsite8.html">RETURN</a></li>
 
-<p style =" color: white"><marquee><h1> LOCAL RATE<h1></marquee></p>
+
 
 <p><h2><font style="border:2px double;">3D2N SINGAPORE PACKAGE(HOTEL + TRANSFERS)</font></p></h2>
 <p><font size="4">Travel Period: Until Sep 30, 2018 (except Christmas Season, Holyweek, Holidays and Sep 12-17, 2018) minimum of 2 persons.</p>
@@ -75,7 +75,7 @@ position:absolute;
 <p><font size="4">*Hotel Supreme (3-star) w/ breakfast (3 star) P11900/per pax.</p>
 <p><font size="4">*FRAGRANCE HOTEL (3-star) IMPERIAL or similar class (3 star) P13200/per pax.</p>
 <p><h2>(ITINERARY)</font></p></h2>
-<p><font size="4">Day 1: Arrival, Meet & transfer to hotel , Gardens by the bay Tour (2 gardens pass – The Flower Dome & Cloud forest) E-ticket.</p>
+<p><font size="4">Day 1: Arrival, Meet & transfer to hotel , Gardens by the bay Tour (2 gardens pass â€“ The Flower Dome & Cloud forest) E-ticket.</p>
 <p><font size="4"> Day 2: Breakfast, Universal Studios Day Tour (one way transfer at 8:30-8:45am)</p>
 <p><font size="4">Day 3: Breakfast, Hotel check-out then transfer to airport for return flight.</p>
 <p><font size="4"> Important Note: Room rate is based on cheapest room category hotel check-in is 2:00pm and check-out is 12:00pm.Rate is valid for Filipino passport holders only.</p>
