--- a/uae.html
+++ b/uae.html
@@ -53,7 +53,7 @@ position:absolute;
 <body>
 <left>
 
-	<img style="border:2px solid black;"src="pic/Capture.jpg" width="250px" height=100px" align="left"><br>
+	<img style="border:2px solid black;"src="pic/Capture.JPG" width="250px" height=100px" align="left"><br>
 	&nbsp;  <br>
 
 
@@ -64,7 +64,7 @@ position:absolute;
 <div class ="nav">
 <ul>
 
-<li><a href="file:///C:/Users/alex/Desktop/AIR/mywebsite8.html">RETURN</a></li>
+<li><a href="https://graceairfare.github.io/mywebsite8.html">RETURN</a></li>
 
 <p style =" color: white"><marquee><h1> LOCAL RATE<h1></marquee></p>
 
@@ -72,13 +72,13 @@ position:absolute;
 <p><font size="4">Travel Period: Until Sep 30, 2018 (except Christmas Season, Holyweek and Holidays) Minimum of 2 persons.</p>
 <p><font size="4">Al Farej Hotel (3 star) P18199/per pax City Max BD Hotel (3 star) P19599/ per pax.</p>
 <p><font size="4">Al Jawhara Garden Hotel (4 star) P21199/per pax.</p>
-<p><font size="4">DAY 4 : HANOI – DEPARTURE ( BREAKFAST )</p>
+<p><font size="4">DAY 4 : HANOI â€“ DEPARTURE ( BREAKFAST )</p>
 <p><h2>(INCLUSIONS)</font></p></h2>
 <p><font size="4">*4D3N Hotel Accommodation with breakfast.</p>
 <p><font size="4">*Round Trip Airport Transfers (8:00am-10:00pm)</p>
 <p><h2>(ITINERARY)</font></p></h2>
 <p><font size="4">Day 1: Arrival at Dubai Airport, meet by tour coordinator and transfer to hotel for check-in.</p>
-<p><font size="4">Day 2: Breakfast, Dubai Desert Safari: 4×4 Dune Bashing, Camel Rides, Sand Boards, Henna Painting, Local Costume Photography, Live Tanura Show, Live Belly Dance, Live Fire Show, Arabic Tea coffee & Dates, Barbecue Dinner Buffet and Unlimited Water & Soft drinks.</p>
+<p><font size="4">Day 2: Breakfast, Dubai Desert Safari: 4Ã—4 Dune Bashing, Camel Rides, Sand Boards, Henna Painting, Local Costume Photography, Live Tanura Show, Live Belly Dance, Live Fire Show, Arabic Tea coffee & Dates, Barbecue Dinner Buffet and Unlimited Water & Soft drinks.</p>
 <p><font size="4">Day 3: Breakfast, Abu Dhabi City Tour + Ferrari World: Sheikh Zayed Grand Mosque, Abu Dhabi Corniche, Emirates Palace, Drive Through Presidential Palace, Heritage Village, Abu Dhabi Marina Mall, Islamic Art Museum, Dates Market, Drive To Saadiyat & Yas Island and Ferrari World Theme Park (5 hours)</p>
 <p><font size="4">Day 4: Breakfast, hotel check-out, transfer to airport for return flight.</p>
 <p><h2>(IMPORTANT NOTES)</font></p></h2>
