--- a/vietnam.html
+++ b/vietnam.html
@@ -53,7 +53,7 @@ position:absolute;
 <body>
 <left>
 
-	<img style="border:2px solid black;"src="pic/Capture.jpg" width="250px" height=100px" align="left"><br>
+	<img style="border:2px solid black;"src="pic/Capture.JPG" width="250px" height=100px" align="left"><br>
 	&nbsp;  <br>
 
 
@@ -64,7 +64,7 @@ position:absolute;
 <div class ="nav">
 <ul>
 
-<li><a href="file:///C:/Users/alex/Desktop/AIR/mywebsite8.html">RETURN</a></li>
+<li><a href="https://graceairfare.github.io/mywebsite8.html">RETURN</a></li>
 
 <p style =" color: white"><marquee><h1> LOCAL RATE<h1></marquee></p>
 <p><h2><font style="border:2px double;">4D3N HO CHI MINH+ CUCHI + MY THO PACKAGE (HOTEL + TRANSFERS + TOURS)</font></p></h2>
@@ -76,17 +76,17 @@ position:absolute;
  <p><h2>(INCLUSIONS)</font></p></h2>
 <p><font size="4">*3N Hotel Accommodation at Ho Chi Minh.</p>
 <p><font size="4">*All Meals, Tours and Entrances Fees stated at itinerary.</p>
-<p><font size="4">*Service of a English speaking guide ï All land transfer and boat transportation (SIC).</p>
+<p><font size="4">*Service of a English speaking guide ‚Ä¢ All land transfer and boat transportation (SIC).</p>
  <p><h2>(EXCLUSIONS)</font></p></h2>
 <p><font size="4">*Mandatory Tipping fee of P1,000/person will be collected upon booking.</p>
-<p><font size="4">*Other meals and drinks not stated at itinerary ï Travel insurance & personal expense.</p>
+<p><font size="4">*Other meals and drinks not stated at itinerary ‚Ä¢ Travel insurance & personal expense.</p>
  <p><h2>(ITINERARY)</font></p></h2>
-<p><font size="4">DAY 1 : HO CHI MINH CITY ñ ARRIVAL (D) Meet on arrival at Ho Chi Minh City / Tan Son Nhat International Airport and transfer to hotel. Check in hotel. Free at leisure.</p>
-<p><font size="4">DAY 2 : HO CHI MINH CITY ñ CU CHI  / CITY TOUR  (B/L/D)</p>
+<p><font size="4">DAY 1 : HO CHI MINH CITY ‚Äì ARRIVAL (D) Meet on arrival at Ho Chi Minh City / Tan Son Nhat International Airport and transfer to hotel. Check in hotel. Free at leisure.</p>
+<p><font size="4">DAY 2 : HO CHI MINH CITY ‚Äì CU CHI  / CITY TOUR  (B/L/D)</p>
 <p>Morning: We drive out this morning, to explore the Cu Chi Tunnels, an incredible underground network constructed by Vietnamese fighters during the long struggle for independence. The tunnels contained hospitals, plus accommodation and schools, and were used as a military base for the Vietcong in the American war. Lunch at local restaurant. 
-Afternoon : The sightseeing tour acquaints us with the city's major sights. We pass the now-demolished wartime American E0mbassy , some French colonial structures including the War museum ( or History museum ), the Notre Dame Cathedral and the Old Sai Gon Post Office. Enjoy shopping at Minh collection where you can buy baju kurung, telekong, tudong,Ö, then go to Thai Tuan Vietnamese silk shop, Saigon square (embroidery hand bag). Stop at Hard rock cafÈ if you want to bring back the nice T shirt with cheap price and high quality.
+Afternoon : The sightseeing tour acquaints us with the city's major sights. We pass the now-demolished wartime American E0mbassy , some French colonial structures including the War museum ( or History museum ), the Notre Dame Cathedral and the Old Sai Gon Post Office. Enjoy shopping at Minh collection where you can buy baju kurung, telekong, tudong,‚Ä¶, then go to Thai Tuan Vietnamese silk shop, Saigon square (embroidery hand bag). Stop at Hard rock caf√© if you want to bring back the nice T shirt with cheap price and high quality.
 If the time permits, we can shop such as  in the boutique fashion stores ( khai silk, My Way Deco, Minh Hanh fashion)  Takashimaya Vietnam, the first Japanese department store branch, Diamond Plaza, Parkson Plaza ....Then, we continue our trip on to the bustling Ben Thanh Market where anything and everything is for sale. Dinner & Overnight in HCM City.</p>
-<p><font size="4">DAY 3 : HO CHI MINH ñ MY THO CRUISE ON MEKONG DELTA TOUR (B/L/D)</p>
+<p><font size="4">DAY 3 : HO CHI MINH ‚Äì MY THO CRUISE ON MEKONG DELTA TOUR (B/L/D)</p>
 <p>Morning: Heading out of the town, we travel by roads to the Mekong Delta, Vietnam's largest rice bowl. On arrival in My Tho, we embark on a boat navigating around the intricate small canals in the delta region, which is a great way to observe the local lifestyle close-up and catch a view dotted by many islands. The exciting excursion will pass the lush green vegetation before arriving at the famous Unicorn Island. Here we have opportunities to stroll around an orchard, taste many seasonal fruits and enjoy wonderful traditional music. The next stop of our trip is Ben Tre Province to visit some fascinating local industries. After feasting on a huge lunch we return to Ho Chi Minh. Free at leisure. Dinner and Overnight in HCM City.</p>
 <p><font size="4">DAY 4: HO CHI MINH CITY - DEPARTURE (B) Leisure time until transfer to Ho Chi Minh City / Tan Son Nhat International Airport for departure.</p>
 <p><h2>(IMPORTANT NOTES)</font></p></h2>
@@ -97,7 +97,7 @@ If the time permits, we can shop such as  in the boutique fashion stores ( khai 
 <p><h2><font style="border:2px double;">4D3N Hanoi + HALONG BAY PACKAGE (HOTEL + TRANSFERS + TOURS)</font></p></h2>
 <p><font size="4">Travel Period: Until Sep 30, 2018 (except Christmas Season, Holyweek and Holidays.)</p>
 <p><font size="4">Note: Minimum of 5 persons per booking.</p>
-<p><font size="4">Dí HANOI (3 star) P13700/per pax THIEN THAI HOTEL (4 star) P15700/per pax.</p>
+<p><font size="4">D‚Äô HANOI (3 star) P13700/per pax THIEN THAI HOTEL (4 star) P15700/per pax.</p>
 <p><font size="4">GOLDEN SILK HOTEL (4 star) P17700/per pax.</p>
 <p><h2>(INCLUSIONS)</font></p></h2>
 <p><font size="4">*4D3N Hotel Accommodation with daily breakfast</p>
@@ -107,17 +107,17 @@ If the time permits, we can shop such as  in the boutique fashion stores ( khai 
 <p><h2>(OPTION 1)</font></p></h2>
 <p><font size="4">GOLDEN SILK HOTEL (4 star) P17700/per pax.</p></p>
 <p><font size="4">DAY 2 : HANOI - HALONG TOUR ( BREAKFAST/ SEAFOOD LUNCH/ DINNER )</p>
-<p> Morning: transfer to Halong Bay (165 km east of Hanoi), listed as a World Heritage Area of outstanding natural beauty. ìDragon descending to the seaî as it is known in Vietnamese, picturesque Halong Bay has more than 1,000 limestone islets rising from the sea, many of them containing beautiful grottoes. Arrival Halong, you will take a cruise tour on the wooden junk to visit Halong Bay. While cruising through the bay, seafood lunch is served on board. Visit Thien Cung cave; circle Tuan Chau, Ga Choi, Dinh Huong, Dog and Sail Islets and islands. Check in hotel. Dinner and Overnight in Halong.</p>
-<p><font size="4">DAY 3 : HALONG ñ HANOI ( BREAKFAST/ LUNCH/ DINNER )</p>
-<p> Morning: Free at leisure for relax and ownís discovery of Halong city, market and beach. Lunch at local restaurant. Afternoon : we will drive back to Hanoi. Stop at shopping centre in the middle Hanoi and Halong for shopping and relax. Check in hotel in Hanoi. Free at leisure or own ës discovery Hanoi Old Quarter , free walking to Hoan Kiem Lake to see the peaceful green waters, The Huc Bridge, Thap But (Pen Tower) and take photo outside of Ngoc Son temple. Free for shopping tour in the Hanoi Old Quarter & night market at weekend ( every Fri/Sat/ Sun ). Dinner and in the evening you will attend the performance of the famous Vietnamese traditional art of water puppetry at Thang Long Theatre. Overnight in Hanoi.</p>
-<p><font size="4">DAY 4 : HANOI ñ DEPARTURE (BREAKFAST) Transfer to the airport for flight to departure.</p>
+<p> Morning: transfer to Halong Bay (165 km east of Hanoi), listed as a World Heritage Area of outstanding natural beauty. ‚ÄúDragon descending to the sea‚Äù as it is known in Vietnamese, picturesque Halong Bay has more than 1,000 limestone islets rising from the sea, many of them containing beautiful grottoes. Arrival Halong, you will take a cruise tour on the wooden junk to visit Halong Bay. While cruising through the bay, seafood lunch is served on board. Visit Thien Cung cave; circle Tuan Chau, Ga Choi, Dinh Huong, Dog and Sail Islets and islands. Check in hotel. Dinner and Overnight in Halong.</p>
+<p><font size="4">DAY 3 : HALONG ‚Äì HANOI ( BREAKFAST/ LUNCH/ DINNER )</p>
+<p> Morning: Free at leisure for relax and own‚Äôs discovery of Halong city, market and beach. Lunch at local restaurant. Afternoon : we will drive back to Hanoi. Stop at shopping centre in the middle Hanoi and Halong for shopping and relax. Check in hotel in Hanoi. Free at leisure or own ‚Äòs discovery Hanoi Old Quarter , free walking to Hoan Kiem Lake to see the peaceful green waters, The Huc Bridge, Thap But (Pen Tower) and take photo outside of Ngoc Son temple. Free for shopping tour in the Hanoi Old Quarter & night market at weekend ( every Fri/Sat/ Sun ). Dinner and in the evening you will attend the performance of the famous Vietnamese traditional art of water puppetry at Thang Long Theatre. Overnight in Hanoi.</p>
+<p><font size="4">DAY 4 : HANOI ‚Äì DEPARTURE (BREAKFAST) Transfer to the airport for flight to departure.</p>
 <p><h2>(OPTION 2)</font></p></h2>
 <p><font size="4">DAY 1 : HANOI - ARRIVAL (-/-) Meet on arrival at Hanoi / Noi Bai International Airport, transfer to city centre. Late Check in hotel . Overnight in Hanoi.</p></p>
 <p><font size="4">DAY 2 : HANOI - HALONG TOUR ON BOAT ( BREAKFAST/ SEAFOOD LUNCH/ DINNER )</p>
-<p> Morning : transfer to Halong Bay (165 km east of Hanoi), listed as a World Heritage Area of outstanding natural beauty. ìDragon descending to the seaî as it is known in Vietnamese, picturesque Halong Bay has more than 1,000 limestone islets rising from the sea, many of them containing beautiful grottoes. Noon time, you will board the boutique wooden junk to visit Halong Bay. While cruising through the bay, seafood lunch is served on board. Continue cruising to visit caves; islands, floating fishing village and relax on the board. Evening, enjoy movie night, board games, and squid fishing or relax at leisure . Dinner and Overnight on the boat ñ Each boat has own itinerary cruise , we will indicate the detail cruise in the confirmation.</p></p>
-<p><font size="4">DAY 3 : HALONG ñ HANOI ( BREAKFAST/ LUNCH / DINNER )</p>
-<p> 07.15: Cakes, fruits, tea and coffee will be served. Continue the cruise through Halong Bay. 09.30: Check-out the cabin. Lunch on boat and finished at 10:30 ñ 11:00 11.00: Back Halong pier and transfer back to Hanoi. 16:00 Arrival Hanoi. Check in hotel. Stop at city centre, discovery Hanoi Old Quarter , free walking to Hoan Kiem Lake to see the peaceful green waters, The Huc Bridge, Thap But (Pen Tower) and take photo outside of Ngoc Son temple. Free for shopping tour in the Hanoi Old Quarter & night market at weekend ( every Fri/Sat/ Sun ). Dinner and in the evening you will attend the performance of the famous Vietnamese traditional art of water puppetry at Thang Long Theatre. Overnight in Hanoi.</p></p>
-<p><font size="4">DAY 4 : HANOI ñ DEPARTURE ( BREAKFAST )</p>
+<p> Morning : transfer to Halong Bay (165 km east of Hanoi), listed as a World Heritage Area of outstanding natural beauty. ‚ÄúDragon descending to the sea‚Äù as it is known in Vietnamese, picturesque Halong Bay has more than 1,000 limestone islets rising from the sea, many of them containing beautiful grottoes. Noon time, you will board the boutique wooden junk to visit Halong Bay. While cruising through the bay, seafood lunch is served on board. Continue cruising to visit caves; islands, floating fishing village and relax on the board. Evening, enjoy movie night, board games, and squid fishing or relax at leisure . Dinner and Overnight on the boat ‚Äì Each boat has own itinerary cruise , we will indicate the detail cruise in the confirmation.</p></p>
+<p><font size="4">DAY 3 : HALONG ‚Äì HANOI ( BREAKFAST/ LUNCH / DINNER )</p>
+<p> 07.15: Cakes, fruits, tea and coffee will be served. Continue the cruise through Halong Bay. 09.30: Check-out the cabin. Lunch on boat and finished at 10:30 ‚Äì 11:00 11.00: Back Halong pier and transfer back to Hanoi. 16:00 Arrival Hanoi. Check in hotel. Stop at city centre, discovery Hanoi Old Quarter , free walking to Hoan Kiem Lake to see the peaceful green waters, The Huc Bridge, Thap But (Pen Tower) and take photo outside of Ngoc Son temple. Free for shopping tour in the Hanoi Old Quarter & night market at weekend ( every Fri/Sat/ Sun ). Dinner and in the evening you will attend the performance of the famous Vietnamese traditional art of water puppetry at Thang Long Theatre. Overnight in Hanoi.</p></p>
+<p><font size="4">DAY 4 : HANOI ‚Äì DEPARTURE ( BREAKFAST )</p>
 <p>Transfer to the airport for flight to departure. Important Note: > Mandatory Tipping fee of P1,000/person will be collected upon booking > Rate is not valid on Holy Week and Holidays > Room rate is based on cheapest room category hotel check-in is 2:00pm and check-out is 12:00pm > Rate is valid for Filipino passport holders only.</p></p>
 <p><h2><font style="border:2px double;">3D2N HO CHI MINH PACKAGE(HOTEL + TRANSFER)</font></p></h2>
 <p><font size="4">Travel Period: Until May 31, 2018 (except Christmas Season, Holyweek and Holidays) minimum of 2 persons.</p>
