--- a/website5.html
+++ b/website5.html
@@ -53,7 +53,7 @@ position:absolute;
 <body>
 <left>
 
-	<img style="border:2px solid black;"src="pic/Capture.jpg" width="250px" height=100px" align="left"><br>
+	<img style="border:2px solid black;"src="pic/Capture.JPG" width="250px" height=100px" align="left"><br>
 	&nbsp;  <br>
 
 
@@ -64,7 +64,7 @@ position:absolute;
 <div class ="nav">
 <ul>
 
-<li><a href="file:///C:/Users/alex/Desktop/AIR/mywebsite8.html">RETURN</a></li>
+<li><a href="https://graceairfare.github.io/mywebsite8.html">RETURN</a></li>
 
 <p style =" color: white"><marquee><h1> LOCAL RATE<h1></marquee></p>
 
@@ -97,16 +97,16 @@ position:absolute;
 <p><font size="4">-Baywalk</p>
 <p><font size="4">-Plaza Cuartel</p>
 <p><font size="4">-Cathedral</p>
-<p><font size="4">-Mitra’s Ranch</p>
+<p><font size="4">-Mitraâ€™s Ranch</p>
 <p><font size="4">-Bakers Hill</p>
 <P>-Pasalubong Centers</p>
 <P>-After the tour proceed directly to the PPS International Airport for departure.</P>
 <p><h2>(TERMS and CONDITIONS)</font></p></h2>
 <p><font size="4">-Airfare is not included in the package.</p>
 <p><font size="4">-50% Down payment is required to secure the booking.</p>
-<p><font size="4">-Remaining balance should be settled 7 days prior to client’s arrival.</p>
+<p><font size="4">-Remaining balance should be settled 7 days prior to clientâ€™s arrival.</p>
 <p><font size="4">-Down payment is not refundable.</p>
-<p><font size="4">-Any cancellation received within 7 days prior to the arrival date will occur the first night’s charge.</p>
+<p><font size="4">-Any cancellation received within 7 days prior to the arrival date will occur the first nightâ€™s charge.</p>
 <p><font size="4">-Any cancellation received within 3 days prior to the arrival date will be charged the entire stay.</p>
 <p><font size="4">-If client failed to arrive on your booking date, NO REFUND will be given.</p>
 <p><h2><font style="border:2px double;">3 DAYS 2 NIGHTS EL NIDO TOUR PACKAGE</font></p></h2>
@@ -158,9 +158,9 @@ position:absolute;
 <p><font size="4">-Breakfast at accommodation and prepare for the Pick-up to Busuanga Airport for your departure.</p>
 <p><h2>(TERMS and CONDITION)</font></p></h2>
 <p><font size="4">-50% Down payment is required to secure the booking.</p>
-<p><font size="4">-Remaining balance should be settled 7 days prior to client’s arrival.</p>
+<p><font size="4">-Remaining balance should be settled 7 days prior to clientâ€™s arrival.</p>
 <p><font size="4">-Down payment is not refundable.</p>
-<p><font size="4">-Any cancellation received within 7 days prior to the arrival date will occur the first night’s charge.</p>
+<p><font size="4">-Any cancellation received within 7 days prior to the arrival date will occur the first nightâ€™s charge.</p>
 <p><font size="4">-Any cancellation received within 3 days prior to the arrival date will be charged the entire stay.</p>
 <p><font size="4">-If client failed to arrive on your booking date, NO REFUND will be given.</p>
 
