--- a/mywebsite11.html
+++ b/mywebsite11.html
@@ -68,7 +68,7 @@ position:absolute;
 
 <li><a href="https://graceairfare.github.io/mywebsite8.html">RETURN</a></li>
 
-
+<p style =" color: white"><marquee><h1> TOURIST SPOTS<h1></marquee></p>
 
 	<img style="border:5px double black;"src="pic/nid.jpg" width=" 1000px"height="600px">
 	<br>
