--- a/mywebsite8.html
+++ b/mywebsite8.html
@@ -138,7 +138,7 @@ body{
       </ul>
 </li>
 
- <li><a href="https://graceairfare.github.io/website8.html"> LOCAL RATE</a>
+ <li><a href="https://graceairfare.github.io/mywebsite8.html"> LOCAL RATE</a>
     <ul>
    <li><a href="https://graceairfare.github.io/mywebsite12.html"> INTERNATIONAL RATE</a>
 	
