--- a/mywebsite8.html
+++ b/mywebsite8.html
@@ -159,10 +159,11 @@ body{
 
 <p style = "color:  white"><marquee> <h1> Welcome to grace travel & tour services <h1> </marquee></p>
 
-	<p><img style="border:5px double black;"src="pic/air2.jpg" width=" 350px"height="250px">
+	<img style="border:5px double black;"src="pic/air2.jpg" width=" 350px"height="250px">
 	<img style="border:5px double black;"src="pic/air3.jpg" width=" 350px"height="250px">
+	<br>										    
 	<img style="border:5px double black;"src="pic/air4.jpg" width=" 350px"height="250px">
-	<img style="border:5px double black;"src="pic/air5.jpg" width=" 350px"height="250px"></p>
+	<img style="border:5px double black;"src="pic/air5.jpg" width=" 350px"height="250px"><br>
 	
 	&nbsp; <br>
 	&nbsp; <br>
