--- a/mywebsite8.html
+++ b/mywebsite8.html
@@ -82,13 +82,18 @@ body{
 	background:lightblue;
 	color:black;
 	transition:0.9s;
-	
 	}
-
-
+@viewport{
+	zoom: 1.0;
+	width: extend-to-zoom;
+	}
+@-ms-viewport{
+	width: extend-to-zoom;
+	}	
 
 </style>
 </head>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 <center>
 <body>
 	<img style="border:2px solid black;"src="pic/Capture.JPG" width="250px" height=100px" align="left"><br>
