--- a/mywebsite8.html
+++ b/mywebsite8.html
@@ -83,6 +83,13 @@ body{
 	color:black;
 	transition:0.9s;
 	}
+@media (max width: 500px){
+	nav ul li{
+		box-sizing: border-box;
+		width:100%;
+		padding: 15px;
+		text-align:left;
+	}
 
 </style>
 <head>
