--- a/mywebsite10.html
+++ b/mywebsite10.html
@@ -10,7 +10,7 @@
 <style>
 body{
 margin:0;
-background:url('pic/bot2.jpg');
+background:url('pic/ace.jpg');
 background-size:cover;
 }
 
@@ -70,9 +70,6 @@ position:absolute;
 
 <p style =" color: white"><marquee><h1> THANK YOU for VISITING OUR WEBSITE<h1></marquee></p>
 
-<br>
-<br>
-<br>
 <br>
 <p><h1><font style="border:2px double;">CONTACT US</font></p></h1>
 
