--- a/mywebsite10.html
+++ b/mywebsite10.html
@@ -2,7 +2,7 @@
 
 <html>
 
-	<body background="ace.jpg">
+	<body background="see6.jpg">
 	<head><title>gracetravel&toursevices</title>
 	</head>
 <head>
@@ -69,8 +69,6 @@ position:absolute;
 <li><a href="https://graceairfare.github.io/mywebsite8.html">RETURN</a></li>
 
 <p style =" color: white"><marquee><h1> THANK YOU for VISITING OUR WEBSITE<h1></marquee></p>
-
-<br>
 <p><h1><font style="border:2px double;">CONTACT US</font></p></h1>
 
 <p><font style="background-color: "black"><font size="3 face="calibri" color="black">Grace travel & tour services is here to provide you with more information and answers about </p>
