--- a/mywebsite8.html
+++ b/mywebsite8.html
@@ -90,6 +90,34 @@ body{
 		padding: 15px;
 		text-align:left;
 	}
+	@media screen and (max-width: 800px) {
+    .nav > li {
+        float: none;
+    }
+    .nav ul {
+        display: block;
+        width: 100%;
+    }
+   .nav > li.hover > ul , .nav li li.hover ul {
+        position: static;
+    }
+}
+	$(document).ready(function() {
+	var ww = document.body.clientWidth;
+	if (ww < 800) {
+		$(".toggleMenu").css("display", "inline-block");
+		$(".nav li a").click(function() {
+			$(this).parent("li").toggleClass('hover');
+		});
+	} else {
+		$(".toggleMenu").css("display", "none");
+		$(".nav li").hover(function() {
+			$(this).addClass('hover');
+		}, function() {
+			$(this).removeClass('hover');
+		});
+	}
+});
 
 </style>
 <head>
