--- a/mywebsite8.html
+++ b/mywebsite8.html
@@ -104,6 +104,18 @@ body {font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; }
         position: static;
     }
 }
+	a {text-decoration: none;}
+.container {
+    width: 90%;
+    max-width: 900px;
+    margin: 10px auto;
+}
+.toggleMenu {
+    display:  none;
+    background: #666;
+    padding: 10px 15px;
+    color: #fff;
+}
 	
 </style>
 <head>
@@ -117,7 +129,11 @@ body {font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; }
 
 
 <div class ="navbar">
-
+<div class="container">
+     
+<a class="toggleMenu" href="#">Menu</a>
+		<ul class="nav">
+    <li  class="test">	      
 <ul>
 <li><a href="https://graceairfare.github.io/index.html"> HOME</a></li>
 <li><a href="https://graceairfare.github.io/mywebsite%20(2).html"> SERVICES</a></li>
