--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 padding:20px;
 background-color:white;
 background-size:cover;
-font-size:20px;
+font-size:10px;
 border-radius:10px;
 font-weight:bolder;
 transition:background-color 0.2s ease 0s;
@@ -24,7 +24,7 @@ background-color:red;
 <body>
 <body background="pic/ace.jpg">
 
-<img style="border:5px solid black;"src="pic/unn.jpg" width7500=" px"height="400px"><br>
+<img style="border:5px solid black;"src="pic/unn.jpg" width"500=" px"height="400px"><br>
 
 <a href="https://graceairfare.github.io/mywebsite8.html"><input type="submit" value="CLICK ME" id="button1"></a></li>
 <br>
