--- a/mywebsite (2).html
+++ b/mywebsite (2).html
@@ -9,39 +9,76 @@ margin:0;
 background:url('pic/see5.jpg');
 background-size:cover;
 }
-.nav{
-width:100%;
-background:brown;
-height:44px;
-margin-top:70px;
-opacity:0.8;
-}
-li {
-float:right;
-margin-top:1px;
-
-}
-a{
-width:150px;
-color:white;
-display:block;
-text-decoration;none;
-font-size;20px;
-text-align:center;
-padding:10px;
-border-radius:10px;
-font-family:Century gothic;
-font-weight:bold;
-}
-a:hover{
-background:#669900;
-transition:0.6s;
-ul {
-list-style:none;
-padding:0;
-margin:0;
-position:absolute;
-}
+.navbar{
+	text-align:center;
+	width:100%;
+	background:brown;
+	height:40px;
+	margin-top:70px;
+	opacity:0.7;
+	border-radius:0px;
+	}
+.navbar ul{
+	margin:20px;
+	padding:0;
+	list-style:none;
+	position:relative;
+	
+	}
+.navbar ul li a{
+	display:block;
+	padding:10px;
+	color:yellow;
+	text-decoration:none;
+	width:150px;
+	
+	}
+.navbar ul:after{
+	content:""; clear:both;
+	display:block;
+	
+	}
+.navbar ul li{
+	float:left;
+	list-style:none;
+	border-radius:14px;
+	}
+.navbar ul ul{
+	display:none;
+	}
+.navbar ul li:hover>ul{
+	display:block;
+	}
+.navbar ul li:hover{
+	background:green;
+	transition:0.9s;
+	}
+.navbar ul li:hover a{
+	color:white;
+	}
+.navbar ul ul{
+	background:black;
+	padding:0;
+	margin:0;
+	position:absolute;top:90%;
+	}
+.navbar ul ul li{
+	float:none;
+	position:relative;
+	}
+.navbar ul ul li a{
+	padding:20px;
+	color:white;
+	width:200px;
+	text-align:left;
+	
+	
+	}
+.navbar ul ul li a:hover{
+	background:lightblue;
+	color:black;
+	transition:0.9s;
+	}
 
 
 </style>
