--- a/mywebsite8.html
+++ b/mywebsite8.html
@@ -5,7 +5,7 @@
 <style>
 body{
 	
-	background-image:url('pic/bot.jpg');
+	background-image:url('pic/see5.jpg');
 	background-size:cover;
 	font-family:Century gothic;
 	font-size:11px;
