--- a/mywebsite (2).html
+++ b/mywebsite (2).html
@@ -4,12 +4,15 @@
 	</head>
 
 <style>
-body{
-margin:0;
-background:url('pic/see5.jpg');
-background-size:cover;
-font-size:11px;
-}
+background-image:url('pic/see5.jpg');
+	background-size:cover;
+	font-family:Century gothic;
+	font-size:11px;
+	margin: 0;
+	line-height:20px;
+	
+	
+	}
 .navbar{
 	text-align:center;
 	width:100%;
@@ -80,7 +83,6 @@ font-size:11px;
 	color:black;
 	transition:0.9s;
 	}
-
 
 </style>
 <center>
