--- a/mywebsite (2).html
+++ b/mywebsite (2).html
@@ -1,10 +1,11 @@
+<!DOCTYPE html>
 <html>
-	
-	<head><title>gracetravel&tourservices/services</title>
-	</head>
 
+<title>gracetravel&tourservices</title>
 <style>
-background-image:url('pic/see5.jpg');
+body{
+	
+	background-image:url('pic/see5.jpg');
 	background-size:cover;
 	font-family:Century gothic;
 	font-size:11px;
@@ -83,14 +84,15 @@ background-image:url('pic/see5.jpg');
 	color:black;
 	transition:0.9s;
 	}
-
+	
 </style>
+<head>
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+</head>	
 <center>
 <body>
 	<img style="border:2px solid black;"src="pic/Capture.JPG" width="250px" height=100px" align="left"><br>
 	&nbsp;  <br>
-	
-
 <div class ="navbar">
      
 <ul>
@@ -149,6 +151,7 @@ background-image:url('pic/see5.jpg');
 	
 </ul>
 </div>
+
 	
 	<p style =" color: white"><marquee><h1>TRAVEL and TOUR SERVICES<h1></marquee></p>
 	
