--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 padding:20px;
 background-color:white;
 background-size:cover;
-font-size:10px;
+font-size:12px;
 border-radius:10px;
 font-weight:bolder;
 transition:background-color 0.2s ease 0s;
@@ -30,7 +30,7 @@ background-color:red;
  <br>
  <br> 
                                                                                    
-<a href="https://graceairfare.github.io/mywebsite8.html"><input type="submit" value="CLICK ME" id="button1"></a></li>
+<a href="https://graceairfare.github.io/mywebsite8.html"><input type="submit" value="CLICK HERE" id="button1"></a></li>
 
 
 </center>
