--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<head>
+
 <title>gracetravel&tourservices</title>
 <center>
 <style>
@@ -19,6 +19,8 @@ background-color:red;
 }
 
 </style>
+ <head>
+  <meta charset="utf-8:>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
