--- a/mywebsite (2).html
+++ b/mywebsite (2).html
@@ -96,7 +96,7 @@ body{
 <div class ="navbar">
      
 <ul>
-<li><a href="https://graceairfare.github.io/index.html"> HOME</a></li>
+<li><a href="https://graceairfare.github.io"> HOME</a></li>
 <li><a href="https://graceairfare.github.io/mywebsite%20(2).html"> SERVICES</a></li>
 <li><a href="https://graceairfare.github.io/mywebsite8.html"> PHOTOS</a>
  <ul>
