--- a/mywebsite8.html
+++ b/mywebsite8.html
@@ -18,7 +18,7 @@ body{
 	text-align:center;
 	width:100%;
 	background:brown;
-	height:50px;
+	height:40px;
 	margin-top:70px;
 	opacity:0.7;
 	border-radius:0px;
@@ -160,11 +160,12 @@ body{
 <p style = "color:  white"><marquee> <h1> Welcome to grace travel & tour services <h1> </marquee></p>
 
 	<img style="border:5px double black;"src="pic/air2.jpg" width=" 350px"height="250px">
-	<img style="border:5px double black;"src="pic/air3.jpg" width=" 350px"height="250px">
-	<br>										    
+	<img style="border:5px double black;"src="pic/air3.jpg" width=" 350px"height="250px">									    
 	<img style="border:5px double black;"src="pic/air4.jpg" width=" 350px"height="250px">
-	<img style="border:5px double black;"src="pic/air5.jpg" width=" 350px"height="250px"><br>
-	
+	<br>											    
+	<img style="border:5px double black;"src="pic/bot.jpg" width=" 350px"height="250px">
+	<img style="border:5px double black;"src="pic/dow3.jpg" width=" 350px"height="250px">
+        <img style="border:5px double black;"src="pic/hat.jpg" width=" 350px"height="250px">
 	<p><font style="background-color: none"><font size="2 face="calibri" color="black">Domestic and International airline ticketing, travel and tours packages, hotel booking,
 	 load all networks, ferry booking (Ocean Jet) and bus booking (Metro Manila).</font></p>
 
