--- a/mywebsite8.html
+++ b/mywebsite8.html
@@ -163,9 +163,9 @@ body{
 	<img style="border:5px double black;"src="pic/air3.jpg" width=" 350px"height="250px">									    
 	<img style="border:5px double black;"src="pic/air4.jpg" width=" 350px"height="250px">
 	<br>											    
-	<img style="border:5px double black;"src="pic/bot.jpg" width=" 350px"height="250px">
-	<img style="border:5px double black;"src="pic/dow3.jpg" width=" 350px"height="250px">
-        <img style="border:5px double black;"src="pic/hat.jpg" width=" 350px"height="250px">
+	<img style="border:5px double black;"src="pic/bot2.jpg" width=" 350px"height="250px">
+	<img style="border:5px double black;"src="pic/dow4.jpg" width=" 350px"height="250px">
+        <img style="border:5px double black;"src="pic/hat.jpg" width=" 350px"height="250px"><br>
 	<p><font style="background-color: none"><font size="2 face="calibri" color="black">Domestic and International airline ticketing, travel and tours packages, hotel booking,
 	 load all networks, ferry booking (Ocean Jet) and bus booking (Metro Manila).</font></p>
 
