--- a/mywebsite8.html
+++ b/mywebsite8.html
@@ -152,7 +152,7 @@ body{
 
 </ul>
 </li>	
-  <img style="border:2px solid black;"src="pic/blk.JPG" width="350px" height=36px" align="right"><br>
+  <img style="border:2px solid black;"src="pic/blk.jpg" width="350px" height=36px" align="right"><br>
 	&nbsp;  <br>   
 </ul>
 </div>
