--- a/baguio.html
+++ b/baguio.html
@@ -8,7 +8,7 @@ body{
 	background-image:url('pic/bab.jpg');
 	background-size:cover;
 	font-family:Century gothic;
-	font-size:11px;
+	font-size:12px;
 	margin: 0;
 	line-height:20px;
 	
@@ -35,7 +35,7 @@ body{
 	padding:10px;
 	color:yellow;
 	text-decoration:none;
-	width:150px;
+	width:120px;
 	
 	}
 .navbar ul:after{
@@ -147,7 +147,8 @@ body{
 <li><a href="https://graceairfare.github.io/mywebsite9.html">ABOUT US</a></li>
 </ul>
 </li>	
-     
+<img style="border:none;"src="pic/nnn.jpg" width="350px" height=40px" align="right"><br>
+	&nbsp;  <br>
 	
 </ul>
 </div>
