--- a/china.html
+++ b/china.html
@@ -89,7 +89,7 @@ body{
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>	
-<center>
+
 <body>
 	<img style="border:2px solid black;"src="pic/Capture.JPG" width="250px" height=100px" align="left"><br>
 	&nbsp;  <br>
@@ -154,7 +154,7 @@ body{
 <br>
 <br>
 
-
+	<left>
 <p><h2><font style="border:2px double;">4D3N BEIJING PACKAGE(HOTEL + TRANSFERS + TOURS)</font></p></h2>
 <p><font size="4">Travel Period: Until Sep 30, 2018 (except Christmas Season, Holyweek and Holidays)</p>
 <p><font size="4">*LONGCHENG Near Great Wall (3 star) P7400/per pax.</p>
