--- a/cambodia.html
+++ b/cambodia.html
@@ -153,7 +153,7 @@ body{
 <br>
 <br>
 <br>
-<center>
+<left>
 <p><h2><font style="border:2px double;">3D2N SIEM REAP PACKAGE(HOTEL + TRANSFERS)</font></p></h2>
 <p><font size="4">Travel Period: Until Sep 30, 2018 (except Christmas Season, Holyweek and Holidays) minimum of 2 persons.</p>
 <p><font size="4">*Angkor Vattanakpheap (3 star) P7999/per pax.</p>
