--- a/indonesia.html
+++ b/indonesia.html
@@ -89,7 +89,7 @@ body{
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>	
-<center>
+
 <body>
 	<img style="border:2px solid black;"src="pic/Capture.JPG" width="250px" height=100px" align="left"><br>
 	&nbsp;  <br>
@@ -153,7 +153,7 @@ body{
 <br>
 <br>
 <br>
-
+<left>
 <p><h2><font style="border:2px double;">3D2N Bali Indonesia PACKAGE(Hotel + Airport Transfers)</font></p></h2>
 <p><font size="4">Travel Period: Until Sep 30, 2018 (except Christmas Season, Holyweek and Holidays) minimum of 2 persons.</P>
 <p><font size="4">*Maxone Seminyak Hotel/Siesta Legian Hotel/Solaris Hotel 3 Star P6,699/per pax.</P>
