--- a/japan.html
+++ b/japan.html
@@ -90,7 +90,7 @@ body{
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>	
-<center>
+
 <body>
 	<img style="border:2px solid black;"src="pic/Capture.JPG" width="250px" height=100px" align="left"><br>
 	&nbsp;  <br>
@@ -155,7 +155,7 @@ body{
 <br>
 <br>
 
-
+<left>
 <p><h1><font style="border:2px double;">4D3N TOKYO PACKAGE (HOTEL + 1 way TRANSFER)</font></p></h1>
 <p><font size="4">Travel Period: Until Sep 30, 2018 (except Christmas Season, Mar 21-Apr 15, 2018 and Holidays).</p>
 <p><font size="4">Note: Minimum of 4 persons per booking.</p>
