--- a/singapore.html
+++ b/singapore.html
@@ -89,7 +89,7 @@ body{
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>	
-<center>
+
 <body>
 	<img style="border:2px solid black;"src="pic/Capture.JPG" width="250px" height=100px" align="left"><br>
 	&nbsp;  <br>
@@ -151,7 +151,7 @@ body{
 </ul>
 </div>
 
-
+<left>
 <p><h2><font style="border:2px double;">3D2N SINGAPORE PACKAGE(HOTEL + TRANSFERS)</font></p></h2>
 <p><font size="4">Travel Period: Until Sep 30, 2018 (except Christmas Season, Holyweek, Holidays and Sep 12-17, 2018) minimum of 2 persons.</p>
 <p><font size="4">*HOTEL 81 Geylang (2-star) or similar class w/o breakfast (2 star) P10199/per pax.</p>
