--- a/uae.html
+++ b/uae.html
@@ -89,7 +89,7 @@ body{
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>	
-<center>
+
 <body>
 	<img style="border:2px solid black;"src="pic/Capture.JPG" width="250px" height=100px" align="left"><br>
 	&nbsp;  <br>
@@ -154,7 +154,7 @@ body{
 <br>
 <br>
 <br>
-
+<left>
 <p><h2><font style="border:2px double;">4D3n Dubai Package (HOTEL + TRANSFERS) </font></p></h2>
 <p><font size="4">Travel Period: Until Sep 30, 2018 (except Christmas Season, Holyweek and Holidays) Minimum of 2 persons.</p>
 <p><font size="4">Al Farej Hotel (3 star) P18199/per pax City Max BD Hotel (3 star) P19599/ per pax.</p>
