--- a/vietnam.html
+++ b/vietnam.html
@@ -89,7 +89,7 @@ body{
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>	
-<center>
+
 <body>
 	<img style="border:2px solid black;"src="pic/Capture.JPG" width="250px" height=100px" align="left"><br>
 	&nbsp;  <br>
@@ -154,6 +154,7 @@ body{
 <br>
 <br>
 <br>
+	<left>
 <p><h2><font style="border:2px double;">4D3N HO CHI MINH+ CUCHI + MY THO PACKAGE (HOTEL + TRANSFERS + TOURS)</font></p></h2>
 <p><font size="4">Travel Period: Until Sep 30, 2018 (except Christmas Season, Holyweek and Holidays.)</p>
 <p><font size="4">Note: Minimum of 5 persons per booking.</p>
@@ -226,6 +227,6 @@ If the time permits, we can shop such as  in the boutique fashion stores ( khai 
 <hr>
  	<p><font style="background-color: none"><font size="3" face="calibri" color="black">Copyright & Copy 2018; All Right Reserved | grace travel & tour services</font></p>
 	<hr>
-</center>
+</left>
 </body>
 </html>
