--- a/vietnam.html
+++ b/vietnam.html
@@ -156,7 +156,7 @@ body{
 <br>
 	<left>
 <ul><p><h2><font style="border:2px double;">4D3N HO CHI MINH+ CUCHI + MY THO PACKAGE (HOTEL + TRANSFERS + TOURS)</font></p></h2>
-<ul><p><font size="4">Travel Period: Until Sep 30, 2018 (except Christmas Season, Holyweek and Holidays.)</p>
+<p><font size="4">Travel Period: Until Sep 30, 2018 (except Christmas Season, Holyweek and Holidays.)</p>
 <p><font size="4">Note: Minimum of 5 persons per booking.</p>
 <p><font size="4">* La Felix / Kelly Hotel (3-star) P1170/per pax.</p>
 <p><font size="4">*Blessing 1 / Max Hotel (3-star) P12199/per pax Oscar Hotel (4-star) P13199/per pax.</p>
