--- a/vietnam.html
+++ b/vietnam.html
@@ -221,7 +221,7 @@ If the time permits, we can shop such as  in the boutique fashion stores ( khai 
 <p><font size="4">Day 2: Breakfast,Whole Day (8hrs ) Mekong Delta River and Buddhist Vinh Trang Pagoda with Lunch.</p>
 <p><font size="4">Day 3: Breakfast, Hotel check-out then transfer to airport for return flight.</P>
 <p><h2>(IMPORTANT NOTES)</font></p></h2>
-<p>Room rate is based on cheapest room category hotel check-in is 2:00pm and check-out is 12:00pm.</p></ul>
+<p>Room rate is based on cheapest room category hotel check-in is 2:00pm and check-out is 12:00pm.</p>
 </left>
 <center>
 <hr>
