--- a/cambodia.html
+++ b/cambodia.html
@@ -154,7 +154,7 @@ body{
 <br>
 <br>
 <left>
-<p><h2><font style="border:2px double;">3D2N SIEM REAP PACKAGE(HOTEL + TRANSFERS)</font></p></h2>
+<ul><p><h2><font style="border:2px double;">3D2N SIEM REAP PACKAGE(HOTEL + TRANSFERS)</font></p></h2>
 <p><font size="4">Travel Period: Until Sep 30, 2018 (except Christmas Season, Holyweek and Holidays) minimum of 2 persons.</p>
 <p><font size="4">*Angkor Vattanakpheap (3 star) P7999/per pax.</p>
 <p><font size="4">*Cheathata Angkor / New Riverside Hotel (3 star) P8899.</p>
