--- a/china.html
+++ b/china.html
@@ -155,7 +155,7 @@ body{
 <br>
 
 	<left>
-<p><h2><font style="border:2px double;">4D3N BEIJING PACKAGE(HOTEL + TRANSFERS + TOURS)</font></p></h2>
+<ul><p><h2><font style="border:2px double;">4D3N BEIJING PACKAGE(HOTEL + TRANSFERS + TOURS)</font></p></h2>
 <p><font size="4">Travel Period: Until Sep 30, 2018 (except Christmas Season, Holyweek and Holidays)</p>
 <p><font size="4">*LONGCHENG Near Great Wall (3 star) P7400/per pax.</p>
 <p><font size="4">*WANSHANG HOTEL - Downtown Area (4 Star) P12599/per pax.</p>
