--- a/hongkong.html
+++ b/hongkong.html
@@ -155,7 +155,7 @@ body{
 <br>
 
 <left>
-<p><h2><font style="border:2px double;">3d2N HONG KONG PACKAGE(HOTEL + TRANSFERS + TOUR)</font></p></h2>
+<ul><p><h2><font style="border:2px double;">3d2N HONG KONG PACKAGE(HOTEL + TRANSFERS + TOUR)</font></p></h2>
 <p><font size="4">Travel Period: Until Sep 30, 2018 (except Christmas Season, Holyweek and Holidays.)</p>
 <p><font size="4">Note: Can only choose 1 PM Tour only (Disney / Ocean Park / PM MACAU)</p>
 <p><font size="4">*Rambler Garden (3star)With Disneyland/Ocean Park/Macau Tour Packeges P16200/per pax.</p>
