--- a/indonesia.html
+++ b/indonesia.html
@@ -154,7 +154,7 @@ body{
 <br>
 <br>
 <left>
-<p><h2><font style="border:2px double;">3D2N Bali Indonesia PACKAGE(Hotel + Airport Transfers)</font></p></h2>
+<ul><p><h2><font style="border:2px double;">3D2N Bali Indonesia PACKAGE(Hotel + Airport Transfers)</font></p></h2>
 <p><font size="4">Travel Period: Until Sep 30, 2018 (except Christmas Season, Holyweek and Holidays) minimum of 2 persons.</P>
 <p><font size="4">*Maxone Seminyak Hotel/Siesta Legian Hotel/Solaris Hotel 3 Star P6,699/per pax.</P>
 <p><font size="4">*Honeymoon Package (1 BR Pool Villa) – 1 candlelight dinner with wine, couples massage, free access to Canggu Club, Free Shuttle Service to beach 4 Star Hotel P15,200/per pax.</P>
