--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@ cursor:pointer;
 #button1:hover{
 background-color:red;
 }
+/*---------------------------------------------------------------------------------------------------footer--------------------------------------------------------------------------------------------------------*/
 
+footer{
+width:100%;
+background-color:black;
+padding:20px 0px;
+}
 </style>
  <head>
   <meta charset="utf-8:>
@@ -40,9 +46,15 @@ background-color:red;
 	<br>
 	<br>
 	<br>
-	<HR>
- 	<p><font style="background-color: none"><font size="3" face="calibri" color="black">Copyright & Copy 2018; All Right Reserved | grace travel & tour services</font></p>
-	<hr>
+<footer>
+
+<div class="wrapper">
+	
+	</div>
+
+<p><font style="background-color: none"><font size="3" face="calibri" color="white">Copyright & Copy 2018; All Right Reserved | grace travel & tour services</font></p>
+</footer>	
+ 	
 
 </center>
 </body>
