--- a/mywebsite (2).html
+++ b/mywebsite (2).html
@@ -84,6 +84,14 @@ body{
 	color:black;
 	transition:0.9s;
 	}
+	/*---------------------------------------footer-----------------------------------------*/
+	
+
+footer{
+width:100%;
+background-color:black;
+padding:20px 0px;
+}
 	
 </style>
 <head>
@@ -188,8 +196,21 @@ body{
 	<hr>
 	
 
- 	<p><font style="background-color: none"><font size="3" face="calibri" color="black">Copyright & Copy 2018; All Right Reserved | grace travel & tour services</font></p>
-	<hr>
+ 	
+<footer>
+
+<div class="wrapper">
+	<nav>
+	<ul>
+	<li><a href="https://graceairfare.github.io/mywebsite10.html">CONTACT US</a></li>
+	<li><a href="https://graceairfare.github.io/mywebsite9.html">ABOUT US</a></li>
+
+	</ul>
+	</nav>
+	</div>
+
+<p><font style="background-color: none"><font size="3" face="calibri" color="white">Copyright & Copy 2018; All Right Reserved | grace travel & tour services</font></p>
+</footer>
 	
 </body
 </center>
