--- a/mywebsite8.html
+++ b/mywebsite8.html
@@ -84,6 +84,14 @@ body{
 	color:black;
 	transition:0.9s;
 	}
+/*---------------------------------------footer-----------------------------------------*/
+	
+
+footer{
+width:100%;
+background-color:black;
+padding:20px 0px;
+}	
 
 	
 </style>
@@ -107,16 +115,7 @@ body{
     <li><a href="https://graceairfare.github.io/mywebsite16.html">ATTRACTIONS</a></li>
     <li><a href="https://graceairfare.github.io/mywebsite15.html">PROMOS&PACKAGES</a></li>
     <li><a href="https://graceairfare.github.io/mywebsite11.html">TOURIST SPOTS</a></li>
-    <li><a href="https://graceairfare.github.io/mywebsite8.html"> TRANSIENT HOUSES</a>
-    <ul>
-        <li><a href="https://graceairfare.github.io/baguio.html">BAGUIO</a></li>
-        <li><a href="https://graceairfare.github.io/laoag.html">LAOAG</a></li>
-        <li><a href="https://graceairfare.github.io/lipa.html">LIPA</a></li>
-        <li><a href="https://graceairfare.github.io/pangasinan.html">PANGASINAN</a></li>
-        <li><a href="https://graceairfare.github.io/tagaytay.html">TAGAYTAY</a></li>
-        <li><a href="https://graceairfare.github.io/vigan.html">VIGAN</a></li>
- </ul>
- </li>	   
+    
  </ul>
  </li>							       
  <li><a href="https://graceairfare.github.io/mywebsite8.html">INTERNATIONAL</a>
@@ -145,13 +144,16 @@ body{
     
       </ul>
 </li>
-<li><a href="https://graceairfare.github.io/mywebsite8.html">MORE</a>
-  <ul>
-<li><a href="https://graceairfare.github.io/mywebsite10.html">CONTACT US</a></li>
-<li><a href="https://graceairfare.github.io/mywebsite9.html">ABOUT US</a></li>
-
-</ul>
-</li>	
+<li><a href="https://graceairfare.github.io/mywebsite8.html"> TRANSIENT HOUSES</a>
+    <ul>
+        <li><a href="https://graceairfare.github.io/baguio.html">BAGUIO</a></li>
+        <li><a href="https://graceairfare.github.io/laoag.html">LAOAG</a></li>
+        <li><a href="https://graceairfare.github.io/lipa.html">LIPA</a></li>
+        <li><a href="https://graceairfare.github.io/pangasinan.html">PANGASINAN</a></li>
+        <li><a href="https://graceairfare.github.io/tagaytay.html">TAGAYTAY</a></li>
+        <li><a href="https://graceairfare.github.io/vigan.html">VIGAN</a></li>
+ </ul>
+ </li>	   
   <img style="none;"src="pic/nnn.jpg" width="350px" height=40px" align="right"><br>
 	&nbsp;  <br>   
 </ul>
@@ -168,10 +170,21 @@ body{
         <img style="border:5px double black;"src="pic/hat.jpg" width=" 350px"height="250px"><br>
 	<p><font style="background-color: none"><font size="2 face="calibri" color="black">Domestic and International airline ticketing, travel and tours packages, hotel booking,
 	 load all networks, ferry booking (Ocean Jet) and bus booking (Metro Manila).</font></p>
+<footer>
 
-<HR>
-<p><font style="background-color: none"><font size="3" face="calibri" color="black">Copyright & Copy 2018; All Right Reserved | grace travel & tour services</font></p>
-	<hr>
+<div class="wrapper">
+	<nav>
+	<ul>
+	<li><a href="https://graceairfare.github.io/mywebsite10.html">CONTACT US</a></li>
+	<li><a href="https://graceairfare.github.io/mywebsite9.html">ABOUT US</a></li>
+
+	</ul>
+	</nav>
+	</div>
+
+<p><font style="background-color: none"><font size="3" face="calibri" color="white">Copyright & Copy 2018; All Right Reserved | grace travel & tour services</font></p>
+</footer>
+
 
 </center>
 </body>
