--- a/mywebsite10.html
+++ b/mywebsite10.html
@@ -5,7 +5,7 @@
 <style>
 body{
 	
-	background-image:url('pic/bot.jpg');
+	background-image:url('pic/dow2.jpg');
 	background-size:cover;
 	font-family:Century gothic;
 	font-size:12px;
