--- a/japan.html
+++ b/japan.html
@@ -6,7 +6,7 @@
 <style>
 body{
 	
-	background-image:url('pic/bot.jpg');
+	background-image:url('pic/bab.jpg');
 	background-size:cover;
 	font-family:Century gothic;
 	font-size:12px;
