--- a/mywebsite10.html
+++ b/mywebsite10.html
@@ -164,7 +164,7 @@ padding:20px 0px;
 <p> our tour packages, hotel reservation, airline ticketing and to provide solutions for your needs.</p>
 <p><img style="border:5px double black;"src="pic/add1.jpg" width=" 600px"height="50px"></p>
 <p><font style="border:1px double;"> FOLLOW and SHARE US</p></font>
-
+<iframe src="https://www.facebook.com/plugins/follow.php?href=https%3A%2F%2Fwww.facebook.com%2Fgraciousgtts%2F%3Fpnref%3Dlhc&width=300&height=65&layout=box_count&size=large&show_faces=true&appId" width="300" height="65" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
 <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fwww.facebook.com%2Fgraciousgtts%2F&layout=box_count&size=large&mobile_iframe=true&width=73&height=58&appId" width="73" height="58" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
 <p>Email address: gracetravelandtoursservices@gmail.com</p>
 <p>Phone number: (02)586-8075</p>
