--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ padding:60px 0px;
 
 
 <hr>
-<p><font style="background-color: none"><font size="3" face="calibri" color="white">Copyright & Copy 2018; All Right Reserved | grace travel & tour services</font></p>	
+<p><font style="background-color: none"><font size="3" face="calibri" color="black">Copyright & Copy 2018; All Right Reserved | grace travel & tour services</font></p>	
 <hr>	
 	</center>
 	</body>
