--- a/mywebsite8.html
+++ b/mywebsite8.html
@@ -137,14 +137,14 @@ padding:20px 0px;
 
  <li><a href="https://graceairfare.github.io/mywebsite8.html">LOCAL</a>
     <ul>
-    <li><a href="https://graceairfare.github.io/cambodia.html">BATANES</a></li>						     
-    <li><a href="https://graceairfare.github.io/china.html">BORACAY</a></li>
-    <li><a href="https://graceairfare.github.io/hongkong.html">CAMIGUIN</a></li>
-    <li><a href="https://graceairfare.github.io/japan.html">CEBU</a></li>
-    <li><a href="https://graceairfare.github.io/malaysia.html">ILO-ILO</a></li>
+    <li><a href="https://graceairfare.github.io/batanes.html">BATANES</a></li>						     
+    <li><a href="https://graceairfare.github.io/boracay.html">BORACAY</a></li>
+    <li><a href="https://graceairfare.github.io/camihuin.html">CAMIGUIN</a></li>
+    <li><a href="https://graceairfare.github.io/cebu.html">CEBU</a></li>
+    <li><a href="https://graceairfare.github.io/iloilo.html">ILO-ILO</a></li>
     <li><a href="https://graceairfare.github.io/singapore.html">PALAWAN</a></li>
-    <li><a href="https://graceairfare.github.io/uae.html">PANGLAO ISLAND</a></li>
-    <li><a href="https://graceairfare.github.io/vietnam.html">SURIGAO</a></li>
+    <li><a href="https://graceairfare.github.io/panglao island.html">PANGLAO ISLAND</a></li>
+    <li><a href="https://graceairfare.github.io/surigao.html">SURIGAO</a></li>
 	
     
       </ul>
