--- a/cebu.html
+++ b/cebu.html
@@ -155,10 +155,60 @@ padding:20px 0px;
 <br>
 <br>
 <br>
-
-
-
-
+<ul><p><h2><font style="border:2px double;">4D3N CEBU TOUR PACKAGE</font></p></h2>
+<p><font size="4">-5688/head (If 4 pax).</p>
+<p><h2>(INCLUSIONS)</font></p></h2>
+<p><font size="4">-Round trip airport transfer.</p>
+<p><font size="4">-3 Night stay at ANRI PENSION HOUSE.</p>
+<p><font size="4">-Round trip car transfer.</p>
+<p><font size="4">-Whale Shark Encounter in Oslob.</p>
+<p><font size="4">-Kawasan Falls in Badian.</p>
+<p><font size="4">-Pescador Island hopping (Fish sanctuary, turtle area and Pescador Island, Dolphin watching if possible).</p>
+<p><font size="4">-Sardine Run in Moalboal.</p>/p>
+<p><font size="4">-Cebu City Tour.</p>
+<p><font size="4">Places to visit: Magellan's Cross, Sto. Nino De Cebu, Cebu Heritage Park, Fort San Pedro, Taoist Temple, Temple of Leah, Sirao Peak Flower Garden, Taboan Market Pasalubong Center, 10000 Roses Cafe.</p>
+<p><font size="4">-All entrances and government fees.</p>
+<p><h2>(ITINERARY)</font></p></h2>
+<p><font size="4">DAY 1: Arrive at Mactan Airport then transfer to accommodation.</p>
+<p><font size="4">DAY 2: Breakfast then proceed to City Tour from 8am to 6pm.</p>
+<p><font size="4">> Places to visit: Places to visit: Magellan's Cross, Sto. Nino De Cebu, Cebu Heritage Park, Fort San Pedro, Taoist Temple, Temple of Leah, Sirao Peak Flower Garden, Taboan Market Pasalubong Center, 10000 Roses Cafe. Drop at accommodation after tour.</p>
+<p><font size="4">DAY 3: Pick up at 4AM then travel to Oslob for 2 to 3 hrs.</p>
+<p><font size="4">-Breakfast (Included).</p>
+<p><font size="4">-Whale Shark Encounter from 7:30AM to 8AM (30 minutes allotted time).</p>
+<p><font size="4">-Travel to Kawasan falls and stay until 12:30PM.</p>
+<p><font size="4">-LUNCH (FREE).</p>
+<p><font size="4">-Travel to Moalboal for 30 minutes.</p>
+<p><font size="4">-Pescador Island and Sardine Run from 1PM-5:30PM.</p>
+<p><font size="4">-Travel back to Cebu City at 6PM for drop off and rest.</p>
+<p><font size="4">DAY 4: Breakfast, free until check out (12NN). Transfer to airport.</p>
+<p><h2><font style="border:2px double;">ULTIMATE SOUTH CEBU TOUR</font></p></h2>
+<p><font size="4">-P4,988 3Days 2night CEBU TOUR PACKAGE.</p>
+<p><h2>(INCLUSIONS)</font></p></h2>
+<p><font size="4">-Round trip airport transfer.</p>
+<p><font size="4">-2 Night stay at ANRI PENSION HOUSE.</p>
+<p><font size="4">-Daily breakfast.</p>
+<p><font size="4">-Round trip car transfer.</p>
+<p><font size="4">-Whale Shark Encounter in Oslob.</p>
+<p><font size="4">-Kawasan Falls in Badian.</p>
+<p><font size="4">-Pescador Island hopping (Fish sanctuary, turtle area and Pescador Island, Dolphin watching if possible).</p>
+<p><font size="4">-Sardine Run in Moalboal</p>
+<p><font size="4">-Cebu City Tour</p>
+<p><font size="4">Places to visit: Magellan's Cross, Sto. Nino De Cebu, Cebu Heritage Park, Fort San Pedro, Taoist Temple, Temple of Leah, Sirao Peak Flower Garden, Taboan Market Pasalubong Center, 10000 Roses Cafe.</p>
+<p><font size="4">-All entrances and government fees.</p>
+<p><h2>(ITINERARY)</font></p></h2>
+<p><font size="4">DAY 1: Arrive at Mactan Airport then proceed to City Tour.</p>
+<p><font size="4">-Places to visit: Places to visit: Magellan's Cross, Sto. Nino De Cebu, Cebu Heritage Park, Fort San Pedro, Taoist Temple, Temple of Leah, Sirao Peak Flower Garden, Taboan Market Pasalubong Center, 10000 Roses Cafe.Drop at accommodation after tour.</p>
+<p><font size="4">DAY 2: Pick up at 4AM then travel to Oslob for 2 to 3 hrs.</p>
+<p><font size="4">-Breakfast (Included).</p>
+<p><font size="4">-Whale Shark Encounter from 7:30AM to 8AM (30 minutes allotted time)</p>
+<p><font size="4">-Activity ends in kawasan falls.</p>
+<p><font size="4">-LUNCH (FREE).</p>
+<p><font size="4"> Free time for swimming in Kawasan Falls until 5PM.</p>
+<p><font size="4">-Travel back to Cebu City for drop off and rest.</p>
+<p><font size="4">DAY 3: Breakfast, free until check out (12NN). Transfer to airport.</p>
+<p><h2>TERMS:</font></p></h2>
+<p><font size="4">-Sinulog Week is not inlcuded in this promo (January 15-21, 2018).</p>
+<p><font size="4">-Scheduled flight going to Cebu preferably in the morning.</p>
 
 
 </ul>
