--- a/cebu.html
+++ b/cebu.html
@@ -178,7 +178,7 @@ padding:20px 0px;
 <p><h2>(ITINERARY)</font></p></h2>
 <p><font size="4">DAY 1: Arrive at Mactan Airport then transfer to accommodation.</p>
 <p><font size="4">DAY 2: Breakfast then proceed to City Tour from 8am to 6pm.</p>
-<p><font size="4">> Places to visit: Places to visit: Magellan's Cross, Sto. Nino De Cebu, Cebu Heritage Park, Fort San Pedro, Taoist Temple, Temple of Leah, Sirao Peak Flower Garden, Taboan Market Pasalubong Center, 10000 Roses Cafe. Drop at accommodation after tour.</p>
+<p><font size="4">Places to visit: Places to visit: Magellan's Cross, Sto. Nino De Cebu, Cebu Heritage Park, Fort San Pedro, Taoist Temple, Temple of Leah, Sirao Peak Flower Garden, Taboan Market Pasalubong Center, 10000 Roses Cafe. Drop at accommodation after tour.</p>
 <p><font size="4">DAY 3: Pick up at 4AM then travel to Oslob for 2 to 3 hrs.</p>
 <p><font size="4">-Breakfast (Included).</p>
 <p><font size="4">-Whale Shark Encounter from 7:30AM to 8AM (30 minutes allotted time).</p>
